syntax = "proto3";

package handshake;

option go_package = "berty.tech/weshnet/internal/handshake";

message BoxEnvelope {
  bytes box = 1;
}

message HelloPayload {
  bytes ephemeral_pub_key = 1;
}

message RequesterAuthenticatePayload {
  bytes requester_account_id = 1;
  bytes requester_account_sig = 2;
}

message ResponderAcceptPayload {
  bytes responder_account_sig = 1;
}

message RequesterAcknowledgePayload {
  bool success = 1;
}
